objects/Sales_Data__c.object
<CustomObject>
    <description>Object to hold the sales Data for Sites and Accounts</description>
    <fields>
        <fullName>ADS_Current_Month__c</fullName>
        <label>ADS-Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Current_Qtr__c</fullName>
        <label>ADS-Current Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Current_Yr__c</fullName>
        <label>ADS-Current Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Month__c</fullName>
        <label>ADS-Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Qtr__c</fullName>
        <label>ADS-Last Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Yr__c</fullName>
        <label>ADS-Last Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOPS_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>AOPS Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AOV_Current_Month__c</fullName>
        <label>AOV-Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Qtr__c</fullName>
        <label>AOV-Current Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Yr__c</fullName>
        <label>AOV-Current Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Month__c</fullName>
        <label>AOV-Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Qtr__c</fullName>
        <label>AOV-Last Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Yr__c</fullName>
        <label>AOV-Last Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Org</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>OrgHierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Data</relationshipLabel>
        <relationshipName>Sales_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BatchProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CATEGORY_COUNT_FLG__c</fullName>
        <label>CATEGORY_COUNT_FLG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CATEGORY_COUNT__c</fullName>
        <label>CATEGORY_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBS_IMU_LY__c</fullName>
        <label>CBS IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_IMU_TY__c</fullName>
        <label>CBS IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_LAST_ORDER_DT_TXT__c</fullName>
        <label>CBS_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CBS_LY__c</fullName>
        <label>CBS LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Last_order_amt__c</fullName>
        <label>CBS Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Pot__c</fullName>
        <label>CBS Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_TY__c</fullName>
        <label>CBS TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Total_LY__c</fullName>
        <label>CBS Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CDH_PARTY_ID__c</fullName>
        <label>CDH_PARTY_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_PARTY_SITE_ID__c</fullName>
        <label>CDH_PARTY_SITE_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_LY__c</fullName>
        <label>CPD IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_TY__c</fullName>
        <label>CPD IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_LAST_ORDER_DT_TXT__c</fullName>
        <label>CPD_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPD_LY__c</fullName>
        <label>CPD LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Last_order_amt__c</fullName>
        <label>CPD Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Pot__c</fullName>
        <label>CPD Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_TY__c</fullName>
        <label>CPD TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPD_Total_LY__c</fullName>
        <label>CPD Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_CREATE_DT_TXT__c</fullName>
        <label>CUSTOMER_CREATE_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cadence_Call_Date_Override_Value__c</fullName>
        <label>Cadence Call Date Override Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_LY__c</fullName>
        <label>Contract Furniture IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_TY__c</fullName>
        <label>Contract Furniture IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_LY__c</fullName>
        <label>Contract Furniture LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Last_Order_amt__c</fullName>
        <label>Contract Furniture Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Pot__c</fullName>
        <label>Contract Furniture Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_TY__c</fullName>
        <label>Contract Furniture TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CopiersText__c</fullName>
        <formula>text(Copiers__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CopiersText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copiers__c</fullName>
        <label># Copiers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBI_FSS_Score__c</fullName>
        <label>DNBI FSS Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBI_MatchScore__c</fullName>
        <label>DNBI MatchScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_WCW_Here__c</fullName>
        <label>WCW Here</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_WCW_Total__c</fullName>
        <label>WCW Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Spend_CAD__c</fullName>
        <label>Account Potential (CAD)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Spend__c</fullName>
        <label>Account Potential</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FILING_LAST_ORDER_DT_TXT__c</fullName>
        <label>FILING_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIRST_ORDER_DT_TXT__c</fullName>
        <label>FIRST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FURN_LAST_ORDER_DT_TXT__c</fullName>
        <label>FURN_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_LY__c</fullName>
        <label>Filing &amp; Binding IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_TY__c</fullName>
        <label>Filing &amp; Binding IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_LY__c</fullName>
        <label>Filing &amp; Binding LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Last_Order_amt__c</fullName>
        <label>Filing &amp; Binding Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Pot__c</fullName>
        <label>Filing &amp; Binding Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_TY__c</fullName>
        <label>Filing &amp; Binding TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Total_LY__c</fullName>
        <label>Filing &amp; Binding Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU_LY__c</fullName>
        <label>Furniture IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU_TY__c</fullName>
        <label>Furniture IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_LY__c</fullName>
        <label>Furniture LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Pot__c</fullName>
        <label>Furniture Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_TY__c</fullName>
        <label>Furniture TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Total_LY__c</fullName>
        <label>Furniture Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_last_order_amt__c</fullName>
        <label>Furniture Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GParent_GPID__c</fullName>
        <label>GParent GPID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INK_LAST_ORDER_DT_TXT__c</fullName>
        <label>INK_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_LY__c</fullName>
        <label>Ink Toner IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_TY__c</fullName>
        <label>Ink Toner IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_LY__c</fullName>
        <label>Ink Toner LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Last_Order_amt__c</fullName>
        <label>Ink Toner Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Pot__c</fullName>
        <label>Ink Toner Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_TY__c</fullName>
        <label>Ink Toner TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Total_LY__c</fullName>
        <label>Ink Toner Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LABELS_LAST_ORDER_DT_TXT__c</fullName>
        <label>LABELS_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAST_180_DAYS_SALES_AMT__c</fullName>
        <label>LAST_180_DAYS_SALES_AMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAST_270_DAYS_SALES_AMT__c</fullName>
        <label>LAST_270_DAYS_SALES_AMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAST_365_DAYS_SALES_AMT__c</fullName>
        <label>LAST_365_DAYS_SALES_AMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAST_ORDER_DT_TXT__c</fullName>
        <label>LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LIKELY_TO_PURCHASE_FLG__c</fullName>
        <label>LIKELY_TO_PURCHASE_FLG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_LY__c</fullName>
        <label>Labels &amp; Forms IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_TY__c</fullName>
        <label>Labels &amp; Forms IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_LY__c</fullName>
        <label>Labels &amp; Forms LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Last_Order_amt__c</fullName>
        <label>Labels &amp; Forms Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Pot__c</fullName>
        <label>Labels &amp; Forms Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_TY__c</fullName>
        <label>Labels &amp; Forms TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Total_LY__c</fullName>
        <label>Labels &amp; Forms Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MISC_LAST_ORDER_DT_TXT__c</fullName>
        <label>MISC_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MONTH_SALES_FLG__c</fullName>
        <label>MONTH_SALES_FLG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPS_IMU_LY__c</fullName>
        <label>MPS IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_IMU_TY__c</fullName>
        <label>MPS IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_LAST_ORDER_DT_TXT__c</fullName>
        <label>MPS_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPS_LY__c</fullName>
        <label>MPS LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Last_order_amt__c</fullName>
        <label>MPS Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Pot__c</fullName>
        <label>MPS Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_TY__c</fullName>
        <label>MPS TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Total_LY__c</fullName>
        <label>MPS Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY_IMU__c</fullName>
        <label>MTD Sales LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY__c</fullName>
        <label>MTD Sales LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY_IMU__c</fullName>
        <label>MTD Sales TY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY__c</fullName>
        <label>MTD Sales TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Order_Limit__c</fullName>
        <label>Max Order Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_IMU_LY__c</fullName>
        <label>Miscellaneous IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_IMU_TY__c</fullName>
        <label>Miscellaneous IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_LY__c</fullName>
        <label>Miscellaneous LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Last_Order_amt__c</fullName>
        <label>Miscellaneous Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Pot__c</fullName>
        <label>Miscellaneous Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_TY__c</fullName>
        <label>Miscellaneous TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Total_LY__c</fullName>
        <label>Miscellaneous Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Goal__c</fullName>
        <label>Month Goal</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_LY_IMU__c</fullName>
        <label>Monthly LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_LY__c</fullName>
        <label>Monthly LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Num_of_Categories__c</fullName>
        <label># of Categories</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Orders_Since_Start__c</fullName>
        <label># of Orders Since Start</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFFICE_LAST_ORDER_DT_TXT__c</fullName>
        <label>OFFICE_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OMAXProspectSer_Batch_Processed__c</fullName>
        <label>OMAXProspectSer_Batch Processed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORDERS_SINCE_START_COUNT__c</fullName>
        <label>ORDERS_SINCE_START_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORDERS_SINCE_START_FLG__c</fullName>
        <label>ORDERS_SINCE_START_FLG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_DT_TXT__c</fullName>
        <label>ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_IMU_LY__c</fullName>
        <label>Office Essentials IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_IMU_TY__c</fullName>
        <label>Office Essentials IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_LY__c</fullName>
        <label>Office Essentials LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_Last_Order_amt__c</fullName>
        <label>Office Essentials Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_Pot__c</fullName>
        <label>Office Essentials Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_TY__c</fullName>
        <label>Office Essentials TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Essentials_Total_LY__c</fullName>
        <label>Office Essentials Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amt__c</fullName>
        <label>Opportunity Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orders_Current_Month__c</fullName>
        <label>Orders-Current Month</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Current_Qtr__c</fullName>
        <label>Orders-Current Qtr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Current_Yr__c</fullName>
        <label>Orders-Current Yr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last_Month__c</fullName>
        <label>Orders-Last Month</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last_Qtr__c</fullName>
        <label>Orders-Last Qtr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last_Yr__c</fullName>
        <label>Orders-Last Yr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <formula>Org__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id_RollUp__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Org Id Roll Up</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_Number_of_Locations__c</fullName>
        <label>Number of Sites</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_WCW_Count_DB__c</fullName>
        <label>Org WCW Count - D&amp;B</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_WCW_Count_Rep__c</fullName>
        <label>White Collar Workers</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Sales Data</relationshipLabel>
        <relationshipName>Sales_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAPER_LAST_ORDER_DT_TXT__c</fullName>
        <label>PAPER_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PID_numeric__c</fullName>
        <label>PID_numeric</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paper_IMU_LY__c</fullName>
        <label>Paper IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_IMU_TY__c</fullName>
        <label>Paper IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_LY__c</fullName>
        <label>Paper LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_Last_Order_amt__c</fullName>
        <label>Paper Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_Pot__c</fullName>
        <label>Paper Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_TY__c</fullName>
        <label>Paper TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_Total_LY__c</fullName>
        <label>Paper Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Sales Data (Parent Org)</relationshipLabel>
        <relationshipName>Sales_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_LY_Hardware_Sales__c</fullName>
        <label>Partner LY Hardware Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_LY_Services_Sales__c</fullName>
        <label>Partner LY Services Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Amount__c</fullName>
        <label>Potential Amt</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Printers__c</fullName>
        <label># Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_LY_IMU__c</fullName>
        <label>QTD Sales LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_LY__c</fullName>
        <label>QTD Sales LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_TY_IMU__c</fullName>
        <label>QTD Sales TY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTD_Sales_TY__c</fullName>
        <label>QTD Sales TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_Goal__c</fullName>
        <label>Quarter Goal</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_LY_IMU__c</fullName>
        <label>Quarter LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_LY__c</fullName>
        <label>Quarter LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_12_month_Sales_text__c</fullName>
        <formula>&apos;$ &apos;+text(round(Rolling_12_month_sales__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolling 12 month Sales text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rolling_12_month_sales__c</fullName>
        <label>Rolling 12 month sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling_3_month_sales__c</fullName>
        <label>Rolling 3 month sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling_6_month_sales__c</fullName>
        <label>Rolling 6 month sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SALES_AMT_FLG__c</fullName>
        <label>SALES_AMT_FLG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_COUNT__c</fullName>
        <label>SITE_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOURCE_SYSTEM__c</fullName>
        <label>SOURCE_SYSTEM</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>